Modifico caratula tesis.

--- a/tesis/caratula.tex
+++ b/tesis/caratula.tex
@@ -19,16 +19,16 @@ Departamento de Computaci\'on}
 
 \vspace{3.0cm}
 
-{
-\Large
-\begin{tabular}{|p{2cm}cp{2cm}|}
-\hline
-& Versión: Jurados. 26 de agosto 2019 &\\
-\hline
-\end{tabular}
-}
+% {
+% \Large
+% \begin{tabular}{|p{2cm}cp{2cm}|}
+% \hline
+% & Versión: Jurados. 26 de agosto 2019 &\\
+% \hline
+% \end{tabular}
+% }
 
-\vspace{2.0cm}
+% \vspace{2.0cm}
 
 \begin{huge}
 \textbf{\tituloTesis}
